--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-aiorpcX[ws]>=0.22,<0.23
-attrs
-plyvel
-pylru
-aiohttp>=3.3,<4.0
+aiohttp==3.7.4
+pylru==1.2.0
+plyvel==1.3.0
+aiorpcx==0.22.0
+x16r_hash==1.0.1
+x16rv2_hash==1.0
+kawpow==0.9.4.4
