--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -8,5 +8,5 @@ DAEMON_URL = http://username:password@hostname:port/
 COIN = Ravencoin
 
 
-# See http://electrumx.readthedocs.io/en/latest/environment.html for
+# See https://electrumx-ravencoin.readthedocs.io/en/latest/environment.html for
 # information about other configuration settings you probably want to consider.
