--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -7,6 +7,24 @@ DAEMON_URL = http://username:password@hostname:port/
 
 COIN = Ravencoin
 
+SERVICES = ssl://:50002 #,tcp://:50001
+
+SSL_CERTFILE = /home/electrumx/ssl_cert/server.crt
+SSL_KEYFILE = /home/electrumx/ssl_cert/server.key
+
+# REQUIRED to connect with the larger electrumx ravencoin server network
+# REPORT_SERVICES = ssl://your.domain.here:50002,tcp://your.domain.here:50001
+
+# The default in-memory cache size is 1.2G
+# CACHE_MB = 750
+
+# Maximum size of a response. Default is 10,000,000 Bytes
+# MAX_SEND = 1000000
+
+COST_SOFT_LIMIT = 0
+COST_HARD_LIMIT = 0
+
+BANDWIDTH_UNIT_COST = 1000
 
 # See https://electrumx-ravencoin.readthedocs.io/en/latest/environment.html for
 # information about other configuration settings you probably want to consider.
