--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -12,7 +12,7 @@ SERVICES = ssl://:50002 #,tcp://:50001
 SSL_CERTFILE = /home/electrumx/ssl_cert/server.crt
 SSL_KEYFILE = /home/electrumx/ssl_cert/server.key
 
-# REQUIRED to connect with the larger electrumx ravencoin server network
+# REQUIRED to connect with the larger electrumx ravencoin server network. Full IP/URL is required
 # REPORT_SERVICES = ssl://your.domain.here:50002,tcp://your.domain.here:50001
 
 # The default in-memory cache size is 1.2G
