--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -1,5 +1,8 @@
 # default /etc/electrumx.conf for systemd
 
+# See https://electrumx-ravencoin.readthedocs.io/en/latest/environment.html for
+# information about other configuration settings you really probably want to consider.
+
 # REQUIRED
 DB_DIRECTORY = /db
 # Ravencoin Node RPC Credentials
@@ -25,6 +28,3 @@ COST_SOFT_LIMIT = 0
 COST_HARD_LIMIT = 0
 
 BANDWIDTH_UNIT_COST = 1000
-
-# See https://electrumx-ravencoin.readthedocs.io/en/latest/environment.html for
-# information about other configuration settings you probably want to consider.
