--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -15,13 +15,14 @@ SERVICES = ssl://:50002 #,tcp://:50001
 SSL_CERTFILE = /home/electrumx/ssl_cert/server.crt
 SSL_KEYFILE = /home/electrumx/ssl_cert/server.key
 
-# REQUIRED to connect with the larger electrumx ravencoin server network. Full IP/URL is required
+# REQUIRED to connect with the larger electrumx ravencoin server network.
+# Full IP/URL:PORT is REQUIRED
 # REPORT_SERVICES = ssl://your.domain.here:50002,tcp://your.domain.here:50001
 
 # The default in-memory cache size is 1.2G
 # CACHE_MB = 750
 
-# Maximum size of a response. Default is 10,000,000 Bytes
+# Maximum size of a response. Default is 2,000,000 Bytes
 # MAX_SEND = 1000000
 
 COST_SOFT_LIMIT = 0
