--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -16,7 +16,7 @@ SSL_CERTFILE = /home/electrumx/ssl_cert/server.crt
 SSL_KEYFILE = /home/electrumx/ssl_cert/server.key
 
 # REQUIRED to connect with the larger electrumx ravencoin server network.
-# Full IP/URL:PORT is REQUIRED
+# Full service://(IP/URL):PORT is REQUIRED
 # REPORT_SERVICES = ssl://your.domain.here:50002,tcp://your.domain.here:50001
 
 # The default in-memory cache size is 1.2G
