--- a/contrib/systemd/electrumx.service
+++ b/contrib/systemd/electrumx.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Electrumx
-After=network.target
+After=network.target network-online.target
+Wants=network-online.target
 
 [Service]
 EnvironmentFile=/etc/electrumx.conf
