Fix comment on new line

--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -10,7 +10,8 @@ DAEMON_URL = http://username:password@hostname:port/
 
 COIN = Ravencoin
 
-SERVICES = ssl://:50002 #,tcp://:50001
+SERVICES = ssl://:50002
+#,tcp://:50001
 
 SSL_CERTFILE = /home/electrumx/ssl_cert/server.crt
 SSL_KEYFILE = /home/electrumx/ssl_cert/server.key
