--- a/contrib/Dockerfile
+++ b/contrib/Dockerfile
@@ -11,8 +11,7 @@ RUN apt-get update && \
 RUN python3.8 -m pip install --upgrade pip
 
 # Needed for MacOs
-RUN python3.8 -m pip install scikit-build cmake==3.18.4 aiohttp==3.7.4 pylru==1.2.0 plyvel==1.3.0 \
-        aiorpcx==0.22.1 x16r_hash==1.0.1 x16rv2_hash==1.0 kawpow==0.9.4.4
+RUN python3.8 -m pip install scikit-build 
 
 ADD https://github.com/Electrum-RVN-SIG/electrumx-ravencoin/archive/v1.10.6.tar.gz /
 RUN tar zxvf *.tar.gz
