--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -1,20 +1,22 @@
-# default /etc/electrumx.conf for systemd
+# default /etc/electrumx.conf for systemd for electrumx-evrmore
 
 # See https://electrumx-ravencoin.readthedocs.io/en/latest/environment.html for
 # information about other configuration settings you really probably want to consider.
 
 # REQUIRED
-DB_DIRECTORY = /db
-# Ravencoin Node RPC Credentials
+DB_DIRECTORY = /home/myid/electrumx-evrmore/electrumx_db
+# Evrmore Node RPC Credentials
 DAEMON_URL = http://username:password@hostname:port/
+AIRDROP_CSV_FILE = /home/myid/electrumx-evrmore/electrumx/airdropindexes.csv
 
-COIN = Ravencoin
+COIN = Evrmore
+NET = mainnet
 
-SERVICES = ssl://:50002
-#,tcp://:50001
+SERVICES = tcp://:50001,rpc://localhost:8000
+#,ssl://:50002,wss://:50004
 
-SSL_CERTFILE = /home/electrumx/ssl_cert/server.crt
-SSL_KEYFILE = /home/electrumx/ssl_cert/server.key
+SSL_CERTFILE = /home/myid/electrumx-evrmore/ssl_cert/server.crt
+SSL_KEYFILE = /home/myid/electrumx-evrmore/ssl_cert/server.key
 
 # REQUIRED to connect with the larger electrumx ravencoin server network.
 # Full service://(IP/URL):PORT is REQUIRED
@@ -32,3 +34,6 @@ COST_HARD_LIMIT = 300000
 BANDWIDTH_UNIT_COST = 1000
 
 EVENT_LOOP_POLICY=uvloop
+CACHE_MB = 750
+
+#LOG_LEVEL = debug
