Fix some documentation

--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -18,7 +18,7 @@ SERVICES = tcp://:50001,rpc://localhost:8000
 SSL_CERTFILE = /home/myid/electrumx-evrmore/ssl_cert/server.crt
 SSL_KEYFILE = /home/myid/electrumx-evrmore/ssl_cert/server.key
 
-# REQUIRED to connect with the larger electrumx ravencoin server network.
+# REQUIRED to connect with the larger electrumx-evrmore server network.
 # Full service://(IP/URL):PORT is REQUIRED
 # REPORT_SERVICES = ssl://your.domain.here:50002,tcp://your.domain.here:50001
 
