More README and example file improvements

--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -11,6 +11,7 @@ AIRDROP_CSV_FILE = /home/myid/electrumx-evrmore/electrumx/airdropindexes.csv
 
 COIN = Evrmore
 NET = mainnet
+# NET = testnet
 
 SERVICES = tcp://:50001,rpc://localhost:8000
 #,ssl://:50002,wss://:50004
@@ -35,5 +36,7 @@ BANDWIDTH_UNIT_COST = 1000
 
 EVENT_LOOP_POLICY=uvloop
 CACHE_MB = 750
+
+# DONATION_ADDRESS= ""
 
 #LOG_LEVEL = debug
