EVR -> SAT Update electrumx.conf

--- a/contrib/systemd/electrumx.conf
+++ b/contrib/systemd/electrumx.conf
@@ -1,25 +1,25 @@
-# default /etc/electrumx.conf for systemd for electrumx-evrmore
+# default /etc/electrumx.conf for systemd for electrumx-satori
 
 # See https://electrumx-ravencoin.readthedocs.io/en/latest/environment.html for
 # information about other configuration settings you really probably want to consider.
 
 # REQUIRED
-DB_DIRECTORY = /home/myid/electrumx-evrmore/electrumx_db
-# Evrmore Node RPC Credentials
+DB_DIRECTORY = /home/myid/electrumx-satori/electrumx_db
+# Satori Node RPC Credentials
 DAEMON_URL = http://username:password@hostname:port/
-AIRDROP_CSV_FILE = /home/myid/electrumx-evrmore/electrumx/airdropindexes.csv
+AIRDROP_CSV_FILE = /home/myid/electrumx-satori/electrumx/airdropindexes.csv
 
-COIN = Evrmore
+COIN = Satori
 NET = mainnet
 # NET = testnet
 
 SERVICES = tcp://:50001,rpc://localhost:8000
 #,ssl://:50002,wss://:50004
 
-SSL_CERTFILE = /home/myid/electrumx-evrmore/ssl_cert/server.crt
-SSL_KEYFILE = /home/myid/electrumx-evrmore/ssl_cert/server.key
+SSL_CERTFILE = /home/myid/electrumx-satori/ssl_cert/server.crt
+SSL_KEYFILE = /home/myid/electrumx-satori/ssl_cert/server.key
 
-# REQUIRED to connect with the larger electrumx-evrmore server network.
+# REQUIRED to connect with the larger electrumx-satori server network.
 # Full service://(IP/URL):PORT is REQUIRED
 # REPORT_SERVICES = ssl://your.domain.here:50002,tcp://your.domain.here:50001
 
